--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,16 @@
         "doctrine/orm": "^2.7",
         "sensio/framework-extra-bundle": "^5.6",
         "symfony/apache-pack": "^1.0",
+        "symfony/asset": "v4.4.17",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
-        "symfony/form": "4.4.*",
+        "symfony/form": "* v4.4.16",
         "symfony/framework-bundle": "4.4.*",
         "symfony/maker-bundle": "^1.23",
         "symfony/stopwatch": "4.4.*",
         "symfony/twig-bundle": "4.4.*",
-        "symfony/validator": "4.4.*",
+        "symfony/validator": "* v4.4.16",
         "symfony/web-profiler-bundle": "4.4.*",
         "symfony/yaml": "4.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
