--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,14 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": ">=7.1.3",
+        "php": ">=7.4.9",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "^1.11",
         "doctrine/doctrine-bundle": "^2.1",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
+        "mailjet/mailjet-apiv3-php": "^1.5",
         "sensio/framework-extra-bundle": "^5.6",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "v4.4.17",
